--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@rainbow-me/rainbowkit": "^2.2.7",
     "@tanstack/react-query": "^5.80.7",
     "connectkit": "^1.9.0",
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.31.1",
