--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lottiefiles/dotlottie-react": "^0.14.1",
     "@rainbow-me/rainbowkit": "^2.2.7",
     "@tanstack/react-query": "^5.80.7",
+    "@vercel/analytics": "^1.5.0",
     "connectkit": "^1.9.0",
     "next": "^15.3.3",
     "react": "^18.3.1",
