--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@lottiefiles/dotlottie-react": "^0.14.1",
+    "@prisma/client": "^6.9.0",
     "@rainbow-me/rainbowkit": "^2.2.7",
     "@tanstack/react-query": "^5.80.7",
     "@vercel/analytics": "^1.5.0",
     "connectkit": "^1.9.0",
     "next": "^15.3.3",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.31.1",
@@ -23,12 +26,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "pino-pretty": "^13.0.0",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
