--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pino-pretty": "^13.0.0",
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
