--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.80.7",
     "@vercel/analytics": "^1.5.0",
     "connectkit": "^1.9.1",
+    "ethers": "^6.14.4",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
