--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@headlessui/react": "^2.2.4",
     "@lottiefiles/dotlottie-react": "^0.14.1",
+    "@mui/material": "^7.1.2",
     "@prisma/client": "^6.9.0",
     "@rainbow-me/rainbowkit": "^2.2.7",
     "@tanstack/react-query": "^5.80.7",
