--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate && wagmi generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
+  "dependencies": { 
     "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^2.2.4",
     "@lottiefiles/dotlottie-react": "^0.14.1",
@@ -33,6 +33,7 @@
     "@types/node": "^20.19.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@wagmi/cli": "^2.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "pino-pretty": "^13.0.0",
