--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "install:foundry": "chmod +x ./install-foundry.sh && ./install-foundry.sh",
     "postinstall": "prisma generate && wagmi generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": { 
+  "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^2.2.4",
     "@lottiefiles/dotlottie-react": "^0.14.1",
