switched to proxy & added deploy script

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -4,6 +4,16 @@ out = "out"
 libs = ["lib"]
 solc_version = "0.8.28"
 evm_version = "prague"
+bytecode_hash = "none"
+cbor_metadata = false
 optimizer = true
 optimizer_runs = 200
-remappings = ["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"]
+remappings = [
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts-upgradeable/lib/openzeppelin-contracts/contracts/",
+    "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
+    "openzeppelin-foundry-upgrades/=lib/openzeppelin-foundry-upgrades/src/",
+]
+ffi = true
+ast = true
+build_info = true
+extra_output = ["storageLayout"]
