metadata as JSON in IPFS

--- a/web/package.json
+++ b/web/package.json
@@ -19,9 +19,11 @@
     "@tanstack/react-query": "^5.80.7",
     "@vercel/analytics": "^1.5.0",
     "connectkit": "^1.9.1",
+    "dotenv": "^17.1.0",
     "ethers": "^6.14.4",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
+    "pinata": "^2.4.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.31.4",
