--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@rainbow-me/rainbowkit": "^2.2.7",
     "@tanstack/react-query": "^5.80.7",
     "@vercel/analytics": "^1.5.0",
+    "async-cache-dedupe": "^2.2.0",
     "connectkit": "^1.9.1",
     "dotenv": "^17.1.0",
     "ethers": "^6.14.4",
