--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "ethers": "^6.14.4",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
+    "openai": "^5.9.0",
     "pinata": "^2.4.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
