--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 */node_modules
@@ -31,7 +29,7 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
 
 # vercel
@@ -44,7 +42,7 @@ next-env.d.ts
 # prisma
 /web/src/generated/prisma
 
-#wagmi
+# wagmi
 /web/src/generated/wagmi
 
 # foundry 
